syntax = "proto3";

package routing;

message CacheRoutingConfig {
  // This cache will always receive all operations synchronously.  This should
  // be an absolute URL pointing at a grpcs endpoint.
  // Example: "grpcs://remote.buildbuddy.io"
  string primary_cache = 1;
  // Optional cache that will receive read and write ops based on the flags
  // below. Should be an absolute URL pointing at a grpcs endpoint.
  // Example: "grpcs://remote.buildbuddy.io"
  string secondary_cache = 2;

  // The fraction of operations to send to the secondary cache as background
  // requests.
  float background_copy_fraction = 3;
  // The fraction of write requests to send synchronously to the secondary
  // cache.  Write failures to the secondary cache are logged but not returned
  // to the caller.
  float dual_write_fraction = 4;
  // The fraction of read requests to send as full background reads (rather
  // than simply triggering atime updates) to the secondary cache.  This allows
  // a gradual increase in read load on the secondary cache.
  float background_read_fraction = 5;
  // The fraction of read operations for which we will verify the integrity
  // of reads from the secondary cache.
  float background_read_verify_fraction = 6;
}
